# capture

./: CHANGELOG.rst  GEMINI.md  README.md  README.rst  pyproject.toml
.github/workflows/: action.yml
25.310.064258_test/: screen.mkv  system_video_audio.mkv  test.mlt
docsrc/: conf.py  index.rst  intro.rst
docsrc/modules/: index.rst
scripts/: gemini-tts.py  set_volume.py
scripts/silence/: 23.358.111536.test2.mlt  23.358.111536.test2.txt  23.358.113201.test3.txt  README.md  m.sh  silence.py  silence.sh_  silence_log.py  test.mlt
src/photon_platform/capture/: __init__.py  app.py  capture.py  main.py  mlt_generator.py
src/photon_platform/capture/templates/: mlt_template.xml
