[project]
name = "photon-platform-capture"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "A unified and enhanced media production workflow."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "rich",
    "jinja2",
    "python-slugify",
    "PyGObject",
]

[project.scripts]
capt = "photon_platform.capture.main:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["photon_platform"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "photon_platform.capture.__version__"}

[project.urls]
"Website" = "https://photon-platform.github.io/capture"
"Repository" = "https://github.com/photon-platform/capture"
"Issues" = "https://github.com/photon-platform/capture/issues"
